5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1834_1278.log
== TEST (2019-06-27 21:20:55) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("sequencia: "))
b=0
while(quadro(a-1)):
	b=b+1
print(b)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 21:23:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("sequencia: "))
b=0
while(a[i,j]):
	x=quadro[i,j]
	b=b+1
		
print(x)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 21:25:00) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("sequencia: "))
b=0
i=a//111-1
j=a//111-1
while(a[i,j]):
	x=quadro[i,j]
	b=b+1
		
print(x)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 21:25:15) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("sequencia: "))
b=0
i=a//111-1
j=a//111-1
while(a):
	x=quadro[i,j]
	b=b+1
		
print(x)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 21:25:35) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("sequencia: "))
b=0
i=a//111-1
j=a//111-1
while(a):
	x=quadro[i,j]
	b=b+1
		
	print(x)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 21:26:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("sequencia: "))
b=0
i=a//111-1
j=a//111-1
while(a):
	x=quadro[i,j]
	b=b+1
		
print(x)
	a=int(input("sequencia: "))
-- ERROR:
File "XXXX", line 21
    a=int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 21:26:47) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("sequencia: "))
b=0
i=a//111-1
j=a//111-1
while(a):
	x=quadro[i,j]
	b=b+1
		
print(x)
	c=int(input("sequencia: "))
-- ERROR:
File "XXXX", line 21
    c=int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 21:27:30) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("sequencia: "))
b=0
i=a//111-1
j=a//111-1
while(a):
	x=quadro[i,j]
	b=b+1
	a=int(input("sequencia: "))
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 21:28:09) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("sequencia: "))
b=0
i=a//111-1
j=a//111-1
while(a):
	x=quadro[i,j]
	b=b+1
a=int(input("sequencia: "))
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 21:28:33) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("sequencia: "))
b=0
i=a//111-1
j=a//111-1
while(a-1):
	x=quadro[i,j]
	b=b+1
	a=int(input("sequencia: "))
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 21:29:35) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("sequencia: "))
b=0
i=-1
j=-1
while(a):
	x=quadro[i,j]
	b=b+1
	a=int(input("sequencia: "))
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 21:30:05) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("sequencia: "))
b=0
i=-1
j=-1
while(a):
	x=quadro[i,j]
	b=b+1
	a=int(input("sequencia: "))
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 14:46:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("sequencia: "))
b=0
while(a!= -1):
	x=quadro[i,j]
	b=b+1
	a=int(input("sequencia: "))
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 14:47:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("sequencia: "))
b=0
i=0
j=0
while(a!= -1):
	x=quadro[i,j]
	b=b+1
	a=int(input("sequencia: "))
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 14:49:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("sequencia: "))
b=0
i=1
j=1
while(a!= -1):
	x=quadro[i,j]
	b=b+1
	a=int(input("sequencia: "))
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 14:51:07) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("sequencia: "))
b=0
i=0
j=0
while(a[i,j]!= -1):
	x=quadro[i,j]
	b=b+1
	a=int(input("sequencia: "))
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 14:56:31) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("sequencia: "))
b=0
while(a!= -1):
	i=a//111-1
	j=a//111-1
	x=quadro[i,j]
	b=b+1
	c=int(input("sequencia: "))
print(c)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 14:57:05) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("sequencia: "))
b=0
while(a!= -1):
	i=a//111-1
	j=a//111-1
	x=quadro[i,j]
	b=b+1
	a=int(input("sequencia: "))
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 15:02:37) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("sequencia: "))
c=int(input("sequencia: "))
b=0
while(c!= -1):
	i=a//111-1+b
	j=c//111-1+b
	x=quadro[i,j]
	c=int(input("sequencia: "))
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 15:04:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("sequencia: "))
c=int(input("sequencia: "))
b=0
while(c!= -1):
	b=a//111-1+b
	a=c//111-1+b
	c=int(input("sequencia: "))
print(b)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 15:06:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("sequencia: "))
c=int(input("sequencia: "))
b=0
while(c!= -1):
	b=quadro[(a//111)-1,(c//111)-1]+b
	a=c
	c=int(input("sequencia: "))
print(b)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-28 15:06:39) 
-- CODE:
from numpy import*
from numpy.linalg import*
quadro= array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14],
[1,15,13,1,13,14,0]	
])
a=int(input("sequencia: "))
c=int(input("sequencia: "))
b=0
while(c!= -1):
	b=quadro[(a//111)-1,(c//111)-1]+b
	a=c
	c=int(input("sequencia: "))
print(b)
	
-- EXECUTION TIME:
0.9792
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
50
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
